2005-04-18  Lute Kamstra  <lute@gnu.org>

	* lread.c (Vloads_in_progress): Static.
	* fns.c (Vloads_in_progress): Remove extern.
	(load_in_progress): Add extern.
	(Frequire): Use load_in_progress instead of Vloads_in_progress.

2005-04-18  Thien-Thi Nguyen  <ttn@gnu.org>

	* xmenu.c (Fx_popup_menu): Initialize error_name to NULL.

2005-04-18  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c (XTread_socket): Don't beep on keyboard input even if
	no frame is visible.

2005-04-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* term.c (struct keys): Add support for shifted keys.

2005-04-16  Richard M. Stallman  <rms@gnu.org>

	* xdisp.c (with_echo_area_buffer): Delete WHICH < 0 case.
	(set_message): Call with_echo_area_buffer with WHICH = 0.
	(set_message_1): Erase the echo area buffer first thing.
	(echo_area_display): Don't clear echo_message_buffer.

2005-04-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* Makefile.in (mac.o): Depend on charset.h and coding.h.

	* mac.c: Include charset.h and coding.h.
	[TARGET_API_MAC_CARBON] (Qutf_8): Remove extern.
	[TARGET_API_MAC_CARBON] (cfstring_create_with_string): New
	function.
	[TARGET_API_MAC_CARBON] (Fmac_get_preference): Use it.

	* macfns.c [TARGET_API_MAC_CARBON] (Fx_file_dialog): Likewise.

	* image.c [MAC_OSX] (image_load_quartz2d): Likewise.

	* macterm.c (x_autoselect_window_p): Remove variable.
	(last_window): New variable.
	(XTreassert_line_highlight, x_change_line_highlight): Remove
	declarations.
	(mac_focus_changed, x_detect_focus_change): New functions and
	declarations.
	(XTextExtents16, front_emacs_window): Remove function.
	(mac_focus_frame): New function.
	(XTmouse_position, do_menu_choice, do_zoom_window, XTread_socket)
	(mac_check_for_quit_char): Use it instead of front_emacs_window.
	(x_scroll_bar_report_motion): Obtain window from control owner.
	(x_make_frame_invisible): Set window manager size hint.
	(do_mouse_moved): Remove function.