@@ -1,3 +1,7 @@
+2005-04-18  Thien-Thi Nguyen  <ttn@gnu.org>
+
+	* xfaces.c (realize_x_face) [!HAVE_WINDOW_SYSTEM]: Return NULL.
+
 2005-04-18  Lute Kamstra  <lute@gnu.org>
 
 	* lread.c (Vloads_in_progress): Static.
